--- a/charts/rathena/templates/service.yaml
+++ b/charts/rathena/templates/service.yaml
@@ -14,7 +14,7 @@ spec:
     - port: {{ .service.port }}
       targetPort: {{ .service.name }}
       protocol: {{ .service.protocol }}
-      name: {{ $key}}
+      name: {{ .service.name }}
     {{- end }}
   selector:
     app: {{ template "rathena.name" . }}
