--- a/charts/rathena/Chart.yaml
+++ b/charts/rathena/Chart.yaml
@@ -4,3 +4,8 @@ description: A Helm chart for Kubernetes
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
+dependencies:
+- name: mariadb
+  condition: mariadb.enabled
+  version: 11.1.6
+  repository: https://charts.bitnami.com/bitnami
