--- a/charts/rathena/templates/deployment.yaml
+++ b/charts/rathena/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
         - name: {{ $key }}
           image: "{{ $.Values.image.repository }}:{{ $.Chart.AppVersion }}"
           imagePullPolicy: {{ $.Values.image.pullPolicy }}
-          args: [ "./entrypoint.sh", "{{ $key }}" ]
+          args: [ "entrypoint.sh {{ $key }}" ]
           command: [ "sh", "-c" ]
           ports:
             - name: {{ .service.name }}
