--- a/charts/rathena/templates/service.yaml
+++ b/charts/rathena/templates/service.yaml
@@ -11,10 +11,10 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     {{- range $key, $val := .Values.containers }}
-    - port: {{ .service.port }}
-      targetPort: {{ .service.port }}
-      protocol: {{ .service.protocol }}
-      name: {{ .service.name }}
+    - port: {{ .service.port | quote}}
+      targetPort: {{ .service.port | quote }}
+      protocol: {{ .service.protocol | quote }}
+      name: {{ .service.name | quota }}
     {{- end }}
   selector:
     app: {{ template "rathena.name" . }}
