--- a/charts/rathena/templates/configmap.yaml
+++ b/charts/rathena/templates/configmap.yaml
@@ -6,9 +6,9 @@ data:
   char_conf.txt: |-
     server_name: {{ template "rathena.fullname" . }}
     wisp_server_name: {{ template "rathena.fullname" . }}
-    login_ip: rathena.rathena.svc.cluster.local
+    login_ip: {{.status.podIP}}
     login_port: 6900 
-    char_ip: rathena.rathena.svc.cluster.local
+    char_ip: {{.status.podIP}}
     char_port: 6121
     bind_ip: rathena.rathena.svc.cluster.local
 
@@ -17,9 +17,9 @@ data:
     bind_ip: rathena.rathena.svc.cluster.local
 
   map_conf.txt: |-
-    char_ip: rathena.rathena.svc.cluster.local
+    char_ip: {{ .status.podIP }}
     char_port: 6121
-    map_ip: rathena.rathena.svc.cluster.local
+    map_ip: {{ .status.podIP }}
     map_port: 5121
     bind_ip: rathena.rathena.svc.cluster.local
 
