--- a/charts/rathena/templates/service.yaml
+++ b/charts/rathena/templates/service.yaml
@@ -33,7 +33,7 @@ metadata:
     release: {{ $.Release.Name }}
     heritage: {{ $.Release.Service }}
 spec:
-  type: {{ $.Values.service.type }}
+  type: ClusterIP
   ports:
     - name: {{ .service.name }}
       port: {{ .service.port }}
